--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}", src="https://github.com/NElnour/nelnour.github.io/blob/master/_includes/icon-github.svg">NElnour</a></p>
         {% endif %}
         <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0001-6165-1542" href="https://orcid.org/0000-0001-6165-1542" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">0000-0001-6165-1542</a></div>
 
