--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,11 +23,11 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}"><img src="https://github.com/NElnour/nelnour.github.io/blob/master/_includes/icon-github.png">NElnour</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}"><img src="/_includes/icon-github.png">NElnour</a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}"><img src="https://github.com/NElnour/nelnour.github.io/blob/master/_includes/icon-github.png">NElnour</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}"><img src="/_includes/icon-github.png">NElnour</a></p>
         {% endif %}
 
         <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0001-6165-1542" href="https://orcid.org/0000-0001-6165-1542" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">0000-0001-6165-1542</a></div>
