--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="./about.html" href="./about.html">About me</a></div>
 
         {% if site.github.is_project_page %}
         <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" href="{{ site.github.owner_url }}"><img src="https://wiki.pac3.info/_media/icon/git.png"> NElnour</a></div>
