--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
@@ -21,7 +25,7 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="./about.html" href="./about.html"><span class="glyphicon glyphicon-user"></span>About me</a></div>
+<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="./about.html" href="./about.html"><i class="glyphicon glyphicon-user"></i>About me</a></div>
 
         {% if site.github.is_project_page %}
         <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" href="{{ site.github.owner_url }}"><img src="https://wiki.pac3.info/_media/icon/git.png"> NElnour</a></div>
